Fix header readability on small screens

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ dt {
 header {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     background-color: #fff;
     background-image: url('images/annotations.png');
     background-position: right top;
@@ -66,6 +67,12 @@ header {
 header img {
     height: 100px;
     margin: 0 1rem;
+}
+
+header > div {
+    background-color: #fff;
+    border-radius: 12px;
+    padding: 1rem;
 }
 
 #brand {
